[gd_scene load_steps=8 format=3 uid="uid://dyre0wtdeeh7c"]

[ext_resource type="Shader" uid="uid://cyd36u4tmx2ry" path="res://assets/shaders/fake_3d.gdshader" id="1_esngw"]
[ext_resource type="Texture2D" uid="uid://cr7pw0ennxyuk" path="res://assets/textures/recyclebin.png" id="1_gt1af"]
[ext_resource type="Script" uid="uid://6gjs30jihdp" path="res://assets/scripts/desktop/desktop_apps.gd" id="1_uktdj"]
[ext_resource type="PackedScene" uid="uid://s68a6a8aeg3c" path="res://scenes/tree/TreeApp.tscn" id="2_4eibx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rvyab"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.38928655, 0.3892867, 0.38928637, 0.57254905)
corner_radius_top_left = 4
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uktdj"]
resource_local_to_scene = true
shader = ExtResource("1_esngw")
shader_parameter/rect_size = Vector2(0, 0)
shader_parameter/fov = 40.0000018525
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uktdj"]
size = Vector2(63, 81)

[node name="App" type="Button" node_paths=PackedStringArray("texture_node", "shadow_node")]
custom_minimum_size = Vector2(96, 96)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -48.0
offset_right = 48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(48, 48)
theme_override_styles/focus = SubResource("StyleBoxFlat_rvyab")
script = ExtResource("1_uktdj")
app_to_open = ExtResource("2_4eibx")
texture_node = NodePath("AppTexture")
shadow_node = NodePath("AppShadow")

[node name="AppShadow" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0.41568628)
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -45.0
offset_right = 48.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_gt1af")

[node name="AppTexture" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_uktdj")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -52.0
offset_right = 48.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(48, 48)
texture = ExtResource("1_gt1af")

[node name="DestroyArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DestroyArea"]
position = Vector2(47.5, 48.5)
shape = SubResource("RectangleShape2D_uktdj")

[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
